@@ -1,0 +1,9 @@
+	.cfi_startproc simple
+	.cfi_remember_state
+	.cfi_restore_state
+	.cfi_endproc
+
+	.cfi_startproc simple
+	.cfi_remember_state
+	.cfi_restore_state
+	.cfi_endproc
